--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="col-lg-7 text-left">
                         <div class="h-100 d-inline-flex align-items-center py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
-                            <small>info@example.com</small>
+                            <a href="mailto:advocates@shahassociates.co"><small>advocates@shahassociates.co</small></a>
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
@@ -480,9 +480,10 @@
             <div class="col-lg-4">
                 <div class="d-flex justify-content-lg-center p-4" style="background: rgba(256, 256, 256, .05);">
                     <i class="fa fa-2x fa-envelope-open text-primary"></i>
-                    <div class="ml-3">
+                    <div class="ml-3">     
+
                         <h5 class="text-white">Email Us</h5>
-                        <p class="m-0">info@example.com</p>
+                        <p class="m-0"><a href="mailto:advocates@shahassociates.co" style="color: white;">advocates@shahassociates.co</a></p>
                     </div>
                 </div>
             </div>
